Adds form elements, fake search results to index.html

--- a/jmad/solos/templates/solos/index.html
+++ b/jmad/solos/templates/solos/index.html
@@ -9,3 +9,7 @@
            name="artist" placeholder="i.e. Davis" />
     <button type="submit">Search JMAD</button>
 </form>
+
+<div class="jmad-search-result"></div>
+<div class="jmad-search-result"></div>
+<div class="jmad-search-result"></div>
