--- a/jmad/solos/templates/solos/index.html
+++ b/jmad/solos/templates/solos/index.html
@@ -12,7 +12,9 @@
 
 {% for solo in solos %}
     <div class="jmad-search-result">
+    <a href="/solos/{{ solo.pk }}/">
         {{ solo.track }}: {{ solo.artist }} on
         {{ solo.instrument }}
+    </a>
     </div>
 {% endfor %}
